--- a/MISA.CukCuk.Core/Resources/Resources.resx
+++ b/MISA.CukCuk.Core/Resources/Resources.resx
@@ -147,6 +147,9 @@
   <data name="Error_Email" xml:space="preserve">
     <value>Email không đúng định dạng</value>
   </data>
+  <data name="Error_ImportFile" xml:space="preserve">
+    <value>Vui lòng chọn tệp khác</value>
+  </data>
   <data name="Error_PhoneNumber" xml:space="preserve">
     <value>Số điện thoại không đúng định dạng</value>
   </data>
