--- a/MISA.CulCuk.Infractructure/Properties/Resources.resx
+++ b/MISA.CulCuk.Infractructure/Properties/Resources.resx
@@ -153,8 +153,8 @@
   <data name="Exception_ErrorMsg" xml:space="preserve">
     <value>Có lỗi sảy ra vui lòng liên hệ MISA.</value>
   </data>
-  <data name="Lấy dữ liệu thành công" xml:space="preserve">
-    <value />
+  <data name="Get_Success" xml:space="preserve">
+    <value>Lấy bản ghi thành công</value>
   </data>
   <data name="Update_Error" xml:space="preserve">
     <value>Sửa thất bại</value>
